--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jade": "~1.11.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.3",
     "morgan": "~1.9.1",
     "multer": "^2.0.1",
